--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,12 @@ Style/WhileUntilModifier:
 Metrics/MethodLength:
   Max: 20
 
+Metrics/BlockNesting:
+  Max: 5
+
+Metrics/BlockLength:
+  Max: 50
+
 # YOU CAN PRY MY EMOJOIS FROM MY COLD DEAD HANDS
 Style/AsciiComments:
   Enabled: false
