--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,7 +21,7 @@ Style/WhileUntilModifier:
   Enabled: false
 
 Metrics/MethodLength:
-  Max: 20
+  Max: 30
 
 Metrics/BlockNesting:
   Max: 5
@@ -34,10 +34,13 @@ Style/AsciiComments:
   Enabled: false
 
 Metrics/AbcSize:
-  Max: 30
+  Max: 50
 
 Layout/LineLength:
   Max: 200
 
 Security/Eval:
   Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Max: 10
